[package]
name = "gog"
version = "0.3.4"
authors = ["nicohman <nicohman@demenses.net>"]
repository = "https://git.sr.ht/~nicohman/gogapi-rs"
description = "A crate to use the GOG web api"
license = "GPL-3.0"
keywords = ["gog", "games", "api"]
readme="README.md"
[dependencies]
reqwest = "0.9.2"
serde_json = "1.0.27"
serde_derive = "1.0.78"
serde = "1.0.78"
error-chain = "0.12.0"
regex = "1"
log = "0.4"
curl = "0.4"
select = "0.4.2"
user_agent = "0.6.5"
time = "0.1.42"
cookie = "0.11.0"
