[package]
name = "gog"
version = "0.4.0"
authors = ["nicohman <nicohman@demenses.net>"]
repository = "https://git.sr.ht/~nicohman/gogapi-rs"
description = "A crate to use the GOG web api"
license = "GPL-3.0"
keywords = ["gog", "games", "api"]
readme="README.md"

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
error-chain = "0.12"
regex = "1"
log = "0.4"
curl = "0.4"
select = "0.6"
user_agent = "0.11"
time = "0.3"
cookie = { version = "0.14", features = ["percent-encode"] }
