[package]
name = "gog"
version = "0.4.0"
authors = ["nicohman <nicohman@demenses.net>"]
repository = "https://git.sr.ht/~nicohman/gogapi-rs"
description = "A crate to use the GOG web api"
license = "GPL-3.0"
keywords = ["gog", "games", "api"]
readme="README.md"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
serde = "1.0.152"
error-chain = "0.12.4"
regex = "1.7.0"
log = "0.4.17"
curl = "0.4.44"
select = "0.6.0"
time = "0.3.17"
